# kiro-budget

./: .gitignore  Makefile  README.md  pyproject.toml  requirements-dev.txt  requirements.txt  test_config.json
.kiro/specs/account-configuration/: design.md  requirements.md  tasks.md
.kiro/specs/financial-data-parser/: design.md  requirements.md  tasks.md
.kiro/specs/transaction-import/: design.md  requirements.md  tasks.md
.kiro/steering/: deep-monthly-report.md  project-standards.md  tech.md
.kiro_parser_state/: processing_state.json
docs/: accounts_configuration.md  automatic_sign_detection.md  configuration_and_plugins.md  transaction_classification_fix.md  transfer_timing_considerations.md
examples/: config_plugin_demo.py
plugins/: example_plugin.py
scripts/: README.md
scripts/analysis/: README.md  debug_cli.py  debug_dedup.py  debug_duplicates.py  debug_parsers.py  debug_pdf_content.py  debug_specific_duplicates.py  find_duplicate_transactions.py  find_transfer_pairs.py  monthly_summary_report.py  transfer_timing_analysis.py
scripts/export/: README.md  build_total_csv.py  remove_pdf_qfx_duplicates.py
scripts/import/: README.md
src/kiro_budget/: __init__.py  cli.py
src/kiro_budget/analyzers/: __init__.py
src/kiro_budget/exporters/: __init__.py
src/kiro_budget/models/: __init__.py  core.py
src/kiro_budget/parsers/: __init__.py  base.py  csv_parser.py  pdf_parser.py  qfx_parser.py
src/kiro_budget/utils/: __init__.py  account_config.py  account_enricher.py  config_manager.py  csv_writer.py  duplicate_detector.py  (+7 more)
tests/: test_account_config.py  test_config_manager.py  test_csv_parser.py  test_example.py  test_integration_config_plugin.py  test_pdf_parser.py  test_plugin_manager.py  test_qfx_parser.py  test_sign_detector.py
